--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "file-saver": "^2.0.5",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
+    "vue-cropper": "^1.1.4",
     "vue-router": "^4.5.0",
     "vue3-colorpicker": "^2.3.0"
   },
