--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
   "dependencies": {
     "ant-design-vue": "^4.2.6",
     "axios": "^1.8.4",
+    "echarts": "^5.6.0",
+    "echarts-wordcloud": "^2.1.0",
     "file-saver": "^2.0.5",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-cropper": "^1.1.4",
+    "vue-echarts": "^7.0.3",
     "vue-router": "^4.5.0",
     "vue3-colorpicker": "^2.3.0"
   },
